--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "redux-store": "^0.0.0",
     "yup": "^0.28.4"
   },
   "scripts": {
