--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "semantic-ui-react": "^0.88.2",
     "yup": "^0.28.4"
   },
   "scripts": {
